/test to /tests

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pinkie": "^2.0.4",
     "portfinder": "^1.0.28",
     "request": "^2.88.0",
+    "testcafe-browser-provider-lambdatest": "^2.0.18",
     "wd": "^1.11.4"
   },
   "devDependencies": {
